@@ -1,3 +1,8 @@
+2004-08-31 14:35 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridmath.h added (gridVectorScale).
+	* src/gridmetric.h added (gridCellVolumeDerivative).
+
 2004-08-30 21:04 Mike Park  <mike.park@nasa.gov>
 
 	* src/refine_main.c added, was src/main.c.
